syntax = "proto3";

message AuthTokenData {
  int32 id = 1;
  string email = 2;
  bool admin = 3;
}

message IsAuthenticatedRequest {
  string token = 1;
}

message IsAuthenticatedResponse {
  bool success = 1;
  string error = 2;
}

message ParseAuthTokenRequest {
  string token = 1;
}

message ParseAuthTokenResponse {
  AuthTokenData tokenData = 1;
  bool success = 2;
  string error = 3;
}

service Asgardian {
  rpc isAuthenticated(IsAuthenticatedRequest) returns (IsAuthenticatedResponse);
  rpc parseAuthToken(ParseAuthTokenRequest) returns (ParseAuthTokenResponse);
}